changed displayed columns
Signed-off-by: Nils Witt <nils@nils-witt.de>

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <input id="keyInput"><br>
     <button id="saveKey" onclick="setKey()">Save</button>
     <br>
-    V3.0.0<br>
-    02.11.2020<br>
+    V3.0.1<br>
+    26.11.2020<br>
     Copyright 2017-2020 -- Nils Witt<br>
 
 </div>
@@ -73,9 +73,9 @@
 <div id="presetHolder" style="display: none">
     <table class="plan" id="vplanTemplate">
         <tr>
-            <th class="hlplanlehrer&quot;">Lehrer/in</th>
-            <th class="thlplanstunde">Std.</th>
             <th class="thlplanklasse">Klasse</th>
+            <!--<th class="hlplanlehrer&quot;">Lehrer/in</th>-->
+            <th class="thlplanstunde">Std.</th>
             <th class="thlplanfach">Fach</th>
             <th class="thlplanvfach">Fach neu</th>
             <th class="thlplanvlehrer">Vert.</th>
@@ -84,9 +84,9 @@
         </tr>
         <tbody>
         <tr class="vertretungen" id="vplanRowTemplate">
-            <td class="tdaktionen teacher"><strong></strong></td>
-            <td class="tdaktionen lesson"></td>
             <td class="tdaktionen course"></td>
+            <!--<td class="tdaktionen teacher"><strong></strong></td>-->
+            <td class="tdaktionen lesson"></td>
             <td class="tdaktionen subject"></td>
             <td class="tdaktionen newSubject"></td>
             <td class="tdaktionen newTeacher"></td>
